--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
+    <!--<item>
         <shape android:shape="rectangle">
-            <solid android:color="#FF0000" />
+            <solid android:color="0000FF" />
         </shape>
-    </item>
-    <item android:left="5dp" android:right="5dp"  android:top="5dp" android:bottom="5dp">
+    </item> -->
+    <item android:left="5dp" android:right="5dp"  android:top="5dp" android:bottom="100dp">
         <shape android:shape="rectangle">
             <solid android:color="#FFFFFF" />
         </shape>
