--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,37 +18,45 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:layout_width="350dp"
-        android:layout_height="321dp"
-        android:background="@drawable/border"
+        android:layout_width="wrap_content"
+        android:layout_height="387dp"
+        android:background="#ffffff"
         android:layout_gravity="right"
-        android:paddingTop="50dp">
+        android:paddingTop="50dp"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        style="@style/AppTheme"
+        android:elevation="@dimen/activity_vertical_margin">
 
         <TextView android:id="@+id/login_id"
             style="?android:attr/textAppearanceLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="16dp"
-            android:text="@string/login_name"/>
+            android:text="@string/login_name"
+            android:layout_above="@+id/login_password"
+            android:layout_alignLeft="@+id/welcome"
+            android:layout_alignStart="@+id/welcome" />
 
         <EditText android:id="@+id/login_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="Enter user name"
-            android:layout_alignBottom="@+id/login_id"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/login_id"
-            android:layout_toEndOf="@+id/login_id" />
+            android:layout_toEndOf="@+id/login_id"
+            android:layout_alignBottom="@+id/login_id"
+            android:layout_below="@+id/welcome"
+            android:layout_toRightOf="@+id/login_id" />
 
         <TextView android:id="@+id/login_password"
             style="?android:attr/textAppearanceLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="16dp"
-            android:layout_below="@id/login_name"
-            android:text="@string/password"/>
+            android:text="@string/password"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
         <EditText android:id="@+id/password"
             android:layout_width="wrap_content"
@@ -58,29 +66,51 @@
             android:layout_alignBottom="@+id/login_password"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:layout_toRightOf="@+id/login_id"
             android:layout_toEndOf="@+id/login_id"
-            android:layout_below="@+id/login_id" />
+            android:layout_below="@+id/login_name"
+            android:layout_toRightOf="@+id/login_id"
+            android:password="false"
+           />
 
         <Button android:id="@+id/button_login"
-            android:layout_below="@id/password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="50dp"
             android:text="@string/button_login"
-            android:onClick="validateLogin"/>
+            android:onClick="validateLogin"
+            android:layout_alignTop="@+id/checkBox"
+            android:layout_alignRight="@+id/welcome"
+            android:layout_alignEnd="@+id/welcome" />
 
         <TextView android:id="@+id/forgot_password"
             style="?android:attr/textAppearanceSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="16dp"
-            android:layout_below="@id/button_login"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="50dp"
-            android:layout_marginBottom="50dp"
-            android:text="@string/forgot_password"/>
+            android:text="Forgot password?"
+            android:layout_below="@+id/button_login"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Please login to Redflag App"
+            android:id="@+id/welcome"
+            android:background="#ffffff"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentTop="true"
+            android:textSize="25dp"
+            android:textAlignment="center"
+            android:textStyle="bold|italic"
+            android:layout_above="@+id/login_id"/>
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Admin"
+            android:id="@+id/checkBox"
+            android:layout_below="@+id/login_password"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
     </RelativeLayout>
  </LinearLayout>
