--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -77,11 +77,11 @@
             android:layout_height="wrap_content"
             android:text="@string/button_login"
             android:onClick="validateLogin"
-            android:layout_alignTop="@+id/checkBox"
+            android:layout_below="@+id/password"
             android:layout_alignRight="@+id/welcome"
             android:layout_alignEnd="@+id/welcome" />
 
-        <TextView android:id="@+id/forgot_password"
+       <!-- <TextView android:id="@+id/forgot_password"
             style="?android:attr/textAppearanceSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -89,7 +89,7 @@
             android:text="Forgot password?"
             android:layout_below="@+id/button_login"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true" /> -->
 
         <TextView
             android:layout_width="wrap_content"
@@ -104,13 +104,5 @@
             android:textStyle="bold|italic"
             android:layout_above="@+id/login_id"/>
 
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Admin"
-            android:id="@+id/checkBox"
-            android:layout_below="@+id/login_password"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
     </RelativeLayout>
  </LinearLayout>
