--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -108,20 +108,28 @@
 
     <Button
         android:layout_width="207dp"
-        android:layout_height="77dp"
+        android:layout_height="wrap_content"
         android:text="Register"
+        android:onClick="registerStudent"
         android:id="@+id/button"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:layout_marginTop="50dp"
-        android:layout_gravity="center_horizontal" />
+        android:layout_marginTop="50dp" />
 
     <Button
         android:layout_width="212dp"
         android:layout_height="wrap_content"
         android:text="Record Activities"
+        android:onClick="recordActivity"
         android:id="@+id/button2"
-        android:layout_marginTop="50dp"
-        android:layout_gravity="center_horizontal"
+        android:layout_marginRight="50dp"
         android:layout_weight="0.10" />
 
+    <Button
+        android:layout_width="212dp"
+        android:layout_height="wrap_content"
+        android:text="Report generation"
+        android:onClick="generateReport"
+        android:id="@+id/button3"
+        android:layout_marginRight="100dp"
+        android:layout_weight="0.10" />
 </LinearLayout>
