--- a/app/src/main/res/layout/activity_student_registration.xml
+++ b/app/src/main/res/layout/activity_student_registration.xml
@@ -1,4 +1,116 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout android:id="@+id/RelativeLayout01"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#C0C0C0"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <ImageView
+        android:id="@+id/appIcon"
+        android:layout_width="398dp"
+        android:layout_height="150dp"
+        android:layout_gravity="top"
+        android:scaleType="fitXY"
+        android:src="@drawable/main"/>
+
+
+    <TextView android:text="Registration Form" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/register"
+        android:textSize="30dp"
+        android:layout_marginTop="170dp"
+        android:layout_alignParentTop="true"
+        android:layout_below="@+id/appIcon"
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/user_cname"
+        android:hint="Enter Student's Name"
+        android:focusable="true"
+        android:textColorHighlight="#ff7eff15"
+        android:textColorHint="#ffff25e6"
+        android:textSize="20dp"
+        android:layout_marginTop="230dp"
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/user_tname"
+        android:hint="Enter Teacher's Name"
+        android:focusable="true"
+        android:textColorHighlight="#ff7eff15"
+        android:textColorHint="#ffff25e6"
+        android:textSize="20dp"
+        android:layout_below="@+id/user_cname"
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/user_age"
+        android:hint="Enter Student's Age"
+        android:focusable="true"
+        android:textColorHighlight="#ff7eff15"
+        android:textColorHint="#ffff25e6"
+        android:textSize="20dp"
+        android:layout_below="@+id/user_tname"
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/user_dos"
+        android:focusable="true"
+        android:textColorHighlight="#ff7eff15"
+        android:textColorHint="#ffff25e6"
+        android:textSize="20dp"
+        android:layout_below="@+id/user_age"
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/user_school"
+        android:hint="Enter School"
+        android:focusable="true"
+        android:textColorHighlight="#ff7eff15"
+        android:textColorHint="#ffff25e6"
+        android:textSize="20dp"
+        android:layout_below="@+id/user_dos"
+        android:layout_centerHorizontal="true" />
+
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/user_grade"
+        android:hint="Enter Grade"
+        android:focusable="true"
+        android:textColorHighlight="#ff7eff15"
+        android:textColorHint="#ffff25e6"
+        android:textSize="20dp"
+        android:layout_below="@+id/user_school"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Register"
+        android:layout_centerInParent="true"
+        android:onClick="registerStudent"
+        android:id="@+id/user_reg"
+        android:layout_below="@+id/user_grade"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+         />
+
+
+    </RelativeLayout>
+
+
+<!--??<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -6,7 +118,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.easyway2in.mysqlconnect.Register"
     android:orientation="vertical"
-    android:background="#0BB990"
+    android:background="#C0C0C0"
     >
     <TextView
         android:layout_width="wrap_content"
@@ -86,4 +198,4 @@
         android:layout_marginTop="30dp"
         android:onClick="userReg"
         />
-</LinearLayout>
+</LinearLayout> -->
