--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,33 +1,158 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:screenOrientation="sensorLandscape"
-    tools:context=".Login"
-    android:background="@drawable/mainbackground">
 
-    <RelativeLayout
+
+<!--I ADDED-->
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:background="#C0C0C0"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Login">
+
+
+    <TextView android:text="Login" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/welcome"
+        android:textSize="40dp"
+        android:layout_marginTop="10dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Red Flags App"
+        android:id="@+id/appName"
+        android:layout_below="@+id/welcome"
+        android:layout_centerHorizontal="true"
+        android:textColor="#8B8B00"
+        android:textSize="40dp" />
+
+
+
+    <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView"
+            android:src="@drawable/main"
+            android:layout_below="@+id/appName"
+            android:layout_centerHorizontal="true" />
+
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/login_name"
+        android:hint="Enter Name"
+        android:focusable="true"
+        android:textColorHighlight="#ff7eff15"
+        android:textColorHint="#ffff25e6"
+        android:textSize="20dp"
+        android:layout_marginTop="100dp"
+        android:layout_below="@+id/imageView"
+        android:layout_centerHorizontal="true" />
+
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:id="@+id/login_password"
+        android:hint="Password"
+        android:focusable="true"
+        android:textColorHighlight="#ff7eff15"
+        android:textColorHint="#ffff25e6"
+        android:textSize="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/login_name"
+        android:layout_centerHorizontal="true" />
+
+
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="login"
+        android:id="@+id/button_login"
+        android:onClick="validateLogin"
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/login_password"
+        android:layout_centerHorizontal="true" />
+
+    </RelativeLayout>
+
+    <!-- ????<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:paddingLeft="@dimen/activity_horizontal_margin"
+  android:paddingRight="@dimen/activity_horizontal_margin"
+  android:paddingTop="@dimen/activity_vertical_margin"
+  android:paddingBottom="@dimen/activity_vertical_margin"
+  android:screenOrientation="sensorLandscape"
+  tools:context=".Login"
+  android:background="@drawable/mainbackground"> -->
+
+    <!--??<RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1">
 
     </RelativeLayout>
+-->
 
-    <RelativeLayout
+    <!--??
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Login"
+                android:id="@+id/welcome"
+                android:background="#ffffff"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentTop="true"
+                android:textSize="35dp"
+                android:textAlignment="center"
+                android:layout_above="@+id/login_id"/>
+    -->
+
+    <!--??<TextView
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="Red Flags App"
+             android:id="@+id/appName"
+             android:textColor="#ff7aff24"
+             android:textSize="35dp"
+             android:layout_alignBaseline="@+id/login_name"
+             android:layout_alignBottom="@+id/login_name"
+             android:layout_centerHorizontal="true" /> -->
+
+    <!--??  <RelativeLayout
+      android:layout_width="wrap_content"
+      android:layout_height="387dp"
+      android:background="#ffffff"
+      android:layout_gravity="right"
+      android:paddingTop="50dp"
+      android:layout_margin="@dimen/activity_horizontal_margin"
+      style="@style/AppTheme"
+      android:elevation="@dimen/activity_vertical_margin"> -->
+
+
+
+    <!--??<EditText android:id="@+id/login_name"
         android:layout_width="wrap_content"
-        android:layout_height="387dp"
-        android:background="#ffffff"
-        android:layout_gravity="right"
-        android:paddingTop="50dp"
-        android:layout_margin="@dimen/activity_horizontal_margin"
-        style="@style/AppTheme"
-        android:elevation="@dimen/activity_vertical_margin">
+        android:layout_height="wrap_content"
+        android:hint="Enter user name"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/login_id"
+        android:layout_alignBottom="@+id/login_id"
+        android:layout_below="@+id/welcome"
+        android:layout_toRightOf="@+id/login_id" /> -->
 
-        <TextView android:id="@+id/login_id"
+
+    <!--??<TextView android:id="@+id/login_id"
             style="?android:attr/textAppearanceLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -35,19 +160,10 @@
             android:text="@string/login_name"
             android:layout_above="@+id/login_password"
             android:layout_alignLeft="@+id/welcome"
-            android:layout_alignStart="@+id/welcome" />
+            android:layout_alignStart="@+id/welcome" /> -->
 
-        <EditText android:id="@+id/login_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="Enter user name"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_toEndOf="@+id/login_id"
-            android:layout_alignBottom="@+id/login_id"
-            android:layout_below="@+id/welcome"
-            android:layout_toRightOf="@+id/login_id" />
 
+<!--??
         <TextView android:id="@+id/login_password"
             style="?android:attr/textAppearanceLarge"
             android:layout_width="wrap_content"
@@ -56,9 +172,9 @@
             android:text="@string/password"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true" />-->
 
-        <EditText android:id="@+id/password"
+       <!--?? <EditText android:id="@+id/password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="Enter password"
@@ -70,39 +186,23 @@
             android:layout_below="@+id/login_name"
             android:layout_toRightOf="@+id/login_id"
             android:password="false"
-           />
+           /> -->
 
-        <Button android:id="@+id/button_login"
+<!--??
+    <Button android:id="@+id/button_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/button_login"
             android:onClick="validateLogin"
-            android:layout_below="@+id/password"
+            android:layout_below="@+id/login_password"
             android:layout_alignRight="@+id/welcome"
-            android:layout_alignEnd="@+id/welcome" />
+            android:layout_alignEnd="@+id/welcome" /> -->
 
-       <!-- <TextView android:id="@+id/forgot_password"
-            style="?android:attr/textAppearanceSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:text="Forgot password?"
-            android:layout_below="@+id/button_login"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" /> -->
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Please login to Redflag App"
-            android:id="@+id/welcome"
-            android:background="#ffffff"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentTop="true"
-            android:textSize="25dp"
-            android:textAlignment="center"
-            android:textStyle="bold|italic"
-            android:layout_above="@+id/login_id"/>
 
-    </RelativeLayout>
- </LinearLayout>
+
+
+
+
+   <!--?? </RelativeLayout>
+ </LinearLayout>-->
