--- a/app/src/main/res/layout/activity_comments.xml
+++ b/app/src/main/res/layout/activity_comments.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1">
@@ -19,39 +19,55 @@
         android:layout_height="wrap_content"
         android:id="@+id/act_2"
         android:textSize="25dp"
-        android:layout_marginTop="10dp"
-        android:layout_below="@id/appIcon"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center_horizontal" />
-    <TextView
-        android:layout_width="250dp"
-        android:layout_height="144dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Comments section"
-        android:id="@+id/textView"
-        android:layout_marginTop="30dp"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="180dp"
+        android:layout_centerHorizontal="true" />
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
+    <EditText
+        android:id="@+id/editText1"
+        android:layout_width="fill_parent"
+        android:layout_height="150dp"
+        android:background="#fff"
+        android:padding="30dp"
+        android:maxLength="100"
+        android:layout_marginTop="230dp"
+        android:gravity="top|left"
+        android:hint="Limit your characters to 100"
+        android:lineSpacingMultiplier="1.8"
+        android:inputType="textMultiLine|textCapSentences"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+    </EditText>
+
+    <TextView
+        android:id="@+id/textView1"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:text="Prev"
-        android:id="@+id/button2"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/editText1" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="Submit"
+        android:id="@+id/button2"
+        android:onClick="saveskipping"
+        android:layout_alignBottom="@+id/button1"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Home Screen"
         android:id="@+id/button1"
-        android:layout_alignParentBottom="true"
+        android:onClick="nextgoto_homescreen"
+        android:layout_gravity="right"
+        android:layout_below="@+id/editText1"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_gravity="right" />
+        android:layout_marginTop="43dp" />
 
-</LinearLayout>
+</RelativeLayout>
