--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -36,8 +36,9 @@
         android:layout_centerInParent="true"
         android:onClick="recordActivity"
         android:layout_below="@+id/button"
+        android:layout_marginTop="20dp"
         android:id="@+id/button2"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
+
         />
 
     <Button
@@ -47,7 +48,7 @@
         android:onClick="generateReport"
         android:layout_below="@+id/button2"
         android:layout_centerInParent="true"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginTop="20dp"
         android:id="@+id/button3"
         />
 
